Removal of multiple logical partitioning support with watermark addition for processed records